--- a/grafika.html
+++ b/grafika.html
@@ -65,6 +65,10 @@
             <a href="grafika (4).jpg" target="_blank"><img  src="grafika (4).jpg" alt=""></a>
             <p>Kay, jedna z prvních animovaných postav </p> 
             </div>
+            <div class="grafika2-4">
+                <a href="grafika (1).jpg" target="_blank"><img  src="grafika (1).jpg" alt=""></a>
+                <p>Jedna z prvních prací v kritě. </p> 
+                </div>
         </div>
         </div>
 
