--- a/grafika.html
+++ b/grafika.html
@@ -41,11 +41,11 @@
         <div class="grafika1">
             <div class="grafika1-1">
         <a href="grafika (6).jpg" target="_blank"><img src="grafika (6).jpg" alt=""></a>
-        <p>První prototyp mého loga, papírové provedení.</p>
+        <p>První prototyp mého loga, <br> papírové provedení.</p>
     </div>
     <div class="grafika1-2">
         <a href="logo-black.jpg" target="_blank"><img  src="logo-black.jpg" alt=""></a>
-        <p>Mé logo v počítačovém provedení. Technika: iPad; Aplikace: ProCreate.</p> 
+        <p>Mé logo v počítačovém provedení. <br> Technika: iPad; Aplikace: ProCreate.</p> 
         </div>
         </div>
         </div>
@@ -55,23 +55,100 @@
         <div class="grafika2">
             <div class="grafika2-1">
         <a href="grafika (2).jpg" target="_blank"><img src="grafika (2).jpg" alt=""></a>
-        <p>Postava Ria s Drakem, mýtickým zvířetem.</p>
+        <p>Postava Ria s Drakem, <br> mýtickým zvířetem.</p>
     </div>
     <div class="grafika2-2">
         <a href="grafika (3).jpg" target="_blank"><img  src="grafika (3).jpg" alt=""></a>
-        <p>Tea a její moc manipulovat s přírodními jevy.</p> 
+        <p>Tea a její moc manipulovat <br> s přírodními jevy.</p> 
         </div>
         <div class="grafika2-3">
             <a href="grafika (4).jpg" target="_blank"><img  src="grafika (4).jpg" alt=""></a>
-            <p>Kay, jedna z prvních animovaných postav </p> 
+            <p>Kay, jedna z prvních <br> animovaných postav. </p> 
             </div>
             <div class="grafika2-4">
                 <a href="grafika (1).jpg" target="_blank"><img  src="grafika (1).jpg" alt=""></a>
                 <p>Jedna z prvních prací v kritě. </p> 
                 </div>
         </div>
+        <div class="infografika">
+         <h4>infografika</h4>
+         <div class="grafika3">
+            <div class="grafika3-1">
+                <a href="grafika (5).jpg" target="_blank"><img src="grafika (5).jpg" alt=""></a>
+                <p>Infografika mé osoby, při inverzi barev vypadá jako skutečný vesmír, <br> každá planeta symbolizuje část mě, v souhvězdích se vyskytuje znamení lva.</p>
+            </div>
+         </div>
         </div>
 
+
+        <div class="logo">
+            <h4>logo - adam horňák</h4>
+            <div class="grafika4">
+               <div class="grafika4-1">
+                   <a href="logo (1).png" target="_blank"><img src="logo (1).png" alt=""></a>
+                   <p>logo v adobe illustrator <br> - pozitiv</p>
+               </div>
+               <div class="grafika4-2">
+                <a href="logo (2).png" target="_blank"><img src="logo (2).png" alt=""></a>
+                <p>logo v adobe illustrator <br> - negativ</p>
+               </div>
+            </div>
+           </div>
+         </div>
+
+        <div class="webovky">
+            <h4>design web stránek</h4>
+            <div class="grafika5">
+               <div class="grafika5-1">
+                   <a href="Web (1).png" target="_blank"><img src="Web (1).png" alt=""></a>
+                   <p>design webstránky v adobe xd - index</p>
+               </div>
+               <div class="grafika5-2">
+                <a href="Web (2).png" target="_blank"><img src="Web (2).png" alt=""></a>
+                <p>- o mně</p>
+               </div>
+               <div class="grafika5-3">
+                <a href="Web (3).png" target="_blank"><img src="Web (3).png" alt=""></a>
+                <p>- textová strana, popis</p>
+               </div>
+            </div>
+        </div>
+         
+        <div class="emoji">
+            <h4>emoji</h4>
+            <div class="grafika6">
+               <div class="grafika6-1">
+                   <a href="emoji (1).jpg" target="_blank"><img src="emoji (1).jpg" alt=""></a>
+                   <p>- tanec</p>
+               </div>
+               <div class="grafika6-2">
+                <a href="emoji (2).jpg" target="_blank"><img src="emoji (2).jpg" alt=""></a>
+                <p>- bývalí přátelé</p>
+               </div>
+               <div class="grafika6-3">
+                <a href="emoji (3).jpg" target="_blank"><img src="emoji (3).jpg" alt=""></a>
+                <p>- nejlépe neposlouchat</p>
+               </div>
+               <div class="grafika6-4">
+                <a href="emoji (4).jpg" target="_blank"><img src="emoji (4).jpg" alt=""></a>
+                <p>- psaní</p>
+               </div>
+            </div>
+            <div class="grafika7">
+               <div class="grafika7-1">
+                <a href="emoji (5).jpg" target="_blank"><img src="emoji (5).jpg" alt=""></a>
+                <p>- barvy</p>
+               </div>
+               <div class="grafika7-2">
+                <a href="emoji (6).jpg" target="_blank"><img src="emoji (6).jpg" alt=""></a>
+                <p>- selfies</p>
+               </div>
+               <div class="grafika7-3">
+                <a href="emoji (7).jpg" target="_blank"><img src="emoji (7).jpg" alt=""></a>
+                <p>- přatelé</p>
+               </div>
+            </div>
+        </div>
 
 <script src="script.js"></script>
 
