--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="#home">home</a>
     <a href="#about">about</a>
     <a href="portfolio.html">portfolio</a>
-    <a href="#kontakt">contact</a>
+    <a href="kontakt.html">contact</a>
 </nav>
 </div >
 
@@ -45,7 +45,7 @@
     <a href="#home">home</a>
     <a href="#about">about</a>
     <a href="portfolio.html">portfolio</a>
-    <a href="#kontakt">contact</a>
+    <a href="kontakt.html">contact</a>
 </div>
 </nav>
 <p class="open" style="font-size:30px; cursor:pointer;" onclick="openNav()"><ion-icon name="menu-outline"></ion-icon></p></div>
