--- a/kontakt.html
+++ b/kontakt.html
@@ -53,7 +53,7 @@
 <div class="spotify">
     <h4>spotify</h4>
     <a href="https://open.spotify.com/playlist/4se0ccpPiicGZ48PuMD7rE"> :oblíbené: </a>
-    <p>playlist mých nejoblíbenějších písniček</p>
+    <p class="posledni">playlist mých nejoblíbenějších písniček</p>
 </div>
 
 </div>
