--- a/grafika.html
+++ b/grafika.html
@@ -67,7 +67,7 @@
             </div>
             <div class="grafika2-4">
                 <a href="grafika (1).jpg" target="_blank"><img  src="grafika (1).jpg" alt=""></a>
-                <p>Jedna z prvních prací v kritě. </p> 
+                <p>Jedna z prvních prací <br> v kritě. </p> 
                 </div>
         </div>
         <div class="infografika">
