--- a/grafika.html
+++ b/grafika.html
@@ -7,7 +7,7 @@
     <title>grafika</title>
     <link rel="stylesheet" href="grafika.css">
     <link rel="stylesheet" href="root.css">
-
+    <link rel="icon" href="paperclip.svg" type="image/x-icon">
 
 
 </head>
