--- a/kontakt.html
+++ b/kontakt.html
@@ -7,7 +7,7 @@
     <title>portfolio</title>
     <link rel="stylesheet" href="kontakt.css">
     <link rel="stylesheet" href="root.css">
-    
+    <link rel="icon" href="paperclip.svg" type="image/x-icon">
 
 
 
