--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Great+Vibes&family=Lobster+Two&family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&family=PT+Serif&display=swap" rel="stylesheet">
-
+    <link rel="icon" href="paperclip.svg" type="image/x-icon">
 
 
 </head>
