--- a/webovky.html
+++ b/webovky.html
@@ -7,7 +7,7 @@
     <title>webovky</title>
     <link rel="stylesheet" href="webovky.css">
     <link rel="stylesheet" href="root.css">
-
+    <link rel="icon" href="paperclip.svg" type="image/x-icon">
 
 
 </head>
