--- a/texty.html
+++ b/texty.html
@@ -7,7 +7,7 @@
     <title>texty</title>
     <link rel="stylesheet" href="texty.css">
     <link rel="stylesheet" href="root.css">
-
+    <link rel="icon" href="paperclip.svg" type="image/x-icon">
 
 
 </head>
