--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Home <3</title>
+    <title>Home </title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="root.css">
     <link rel="icon" href="home.svg" type="image/x-icon">
