--- a/texty.html
+++ b/texty.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>texty</title>
+    <title>Texty</title>
     <link rel="stylesheet" href="texty.css">
     <link rel="stylesheet" href="root.css">
     <link rel="icon" href="paperclip.svg" type="image/x-icon">
