--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Ibarra+Real+Nova&family=PT+Serif&family=Playfair+Display&family=Work+Sans:wght@200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Baskervville&family=Bodoni+Moda:opsz@6..96&family=Ibarra+Real+Nova&family=Nanum+Myeongjo&family=PT+Serif&family=Playfair+Display&family=Work+Sans:wght@200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Baskervville&family=Bodoni+Moda:opsz@6..96&family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=DM+Serif+Display&family=Ibarra+Real+Nova&family=Marcellus&family=Nanum+Myeongjo&family=Oranienbaum&family=PT+Serif&family=Playfair+Display&family=Unna&family=Work+Sans:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Baskervville&family=Bodoni+Moda:opsz@6..96&family=Ibarra+Real+Nova&family=Nanum+Myeongjo&family=PT+Serif&family=Playfair+Display&family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Baskervville&family=Bodoni+Moda:opsz@6..96&family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=DM+Serif+Display&family=Ibarra+Real+Nova&family=Marcellus&family=Nanum+Myeongjo&family=Oranienbaum&family=PT+Serif&family=Playfair+Display&family=Unna&family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width">
 
 </head>
@@ -62,18 +62,17 @@
 
 <h4 id="about">ABOUT</h4>
 <span class="span about">
-<p> Jsem Michaela Ptáčková, je mi 15 let a hlásím se na Creative Hill College. Mým cílem je obor Multimédia a grafický design, ale chci pokračovat i v tvorbě webových stránek, se kterou jsem začala začátkem roku 2022.</p> 
+<p> Jsem Michaela Ptáčková a je mi 15 let. Mým cílem je mít vlastní firmu ve které se budu zajímato multimédia, webové stránky a design.</p> 
 <p>Mimo tvorbu webovek se zajímám o umění, což zahrnuje grafický design, hudbu, hru na klávesy, flétnu a kytaru, a taky knihy a poezii.</p>
+<p >Pokud vás zajímají mé práce tak je najdete v mém <a class="text-portfolio" href="portfolio.html">portfoliu</a>.</p>
+
+<h6>Praxe</h6>
+<p>Jako praxi v oboru mimo školu dělám webové stránky, na které se můžete podívat <a href="webovky.html">zde</a>.</p>
+<p>Ceník není stálý, proto ho zde nemohu dát, ceny jsou však velni výhodné, když zvážíme práci i čas.</p>
 
 <h6>Škola</h6>
-<p>Ohledně volného času v rámci školy dělám olympiády z češtiny, angličtiny, fyziky, matematiky, chemie a taky dělám literární soutěže.</p>
-<p>Také mám v plánu psát knihu na téma lgbt, blm a suicide awarness.</p>
-
-<h6>Influence</h6>
-<p>Mými největšími vzory ohledně umění jsou lidi z okolí, lidé se kterými si můžu promluvit o daném tématu.
-Také se ale inspiruji na sociálních sítích jako je twitter, instagram a jiné.
-</p>
-<p >Pokud vás zajímají mé práce tak je najdete v mém <a class="text-portfolio" href="portfolio.html">portfoliu</a>.</p>
+<p>Studuji na <a href="https://skolabaltaci.cz/">SŠ Baltaci</a> ve Zlíně, na oboru Informační technologie.</p>
+<p>V rámci školy se nejvíce zajímám o vývoj her, webových stránek a také o grafický design.</p>
 
 </span>
 </div>
