--- a/texty.html
+++ b/texty.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="texty.css">
     <link rel="stylesheet" href="root.css">
     <link rel="icon" href="paperclip.svg" type="image/x-icon">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Ibarra+Real+Nova&family=PT+Serif&family=Playfair+Display&family=Work+Sans:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Baskervville&family=Bodoni+Moda:opsz@6..96&family=Ibarra+Real+Nova&family=Nanum+Myeongjo&family=PT+Serif&family=Playfair+Display&family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Baskervville&family=Bodoni+Moda:opsz@6..96&family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=DM+Serif+Display&family=Ibarra+Real+Nova&family=Marcellus&family=Nanum+Myeongjo&family=Oranienbaum&family=PT+Serif&family=Playfair+Display&family=Unna&family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    
 
 </head>
 
@@ -38,7 +43,7 @@
     
         <div class="dopis-v-lahvi">
             <h4>vzkaz v lahvi</h4>
-            <p>Krátká povídla o dvou klucích, jeden  z nich najde láhvi  se vzkazem a snaží se najít toho, kdo tam láhev nechal.</p>
+            <p>Krátká povídka o dvou klucích, jeden  z nich najde láhvi  se vzkazem a snaží se najít toho, kdo tam láhev nechal.</p>
             <div class="sloh1">
             <a href="dopis v lahvi (1).png" target="_blank">
             <img src="dopis v lahvi (1).png" alt="">
