--- a/webovky.html
+++ b/webovky.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="webovky.css">
     <link rel="stylesheet" href="root.css">
     <link rel="icon" href="paperclip.svg" type="image/x-icon">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Ibarra+Real+Nova&family=PT+Serif&family=Playfair+Display&family=Work+Sans:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Baskervville&family=Bodoni+Moda:opsz@6..96&family=Ibarra+Real+Nova&family=Nanum+Myeongjo&family=PT+Serif&family=Playfair+Display&family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Baskervville&family=Bodoni+Moda:opsz@6..96&family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=DM+Serif+Display&family=Ibarra+Real+Nova&family=Marcellus&family=Nanum+Myeongjo&family=Oranienbaum&family=PT+Serif&family=Playfair+Display&family=Unna&family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width">
 
 </head>
 
@@ -36,6 +41,8 @@
         </div>
 
         <div class="webovky">
+            <div class="firstweb">
+           <h2>První web - portfolio</h2>
          <div class="pic1">
              <a href="webovky (1).png" target="_blank"><img src="webovky (1).png" alt=""></a>
             <ul>
@@ -78,7 +85,8 @@
                <li>velikost a barva písma</li>
                
            </ul>
-        </div>
+         </div>
+         </div>
         </div>
 
 
