--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <p class="open" style="font-size:30px; cursor:pointer;" onclick="openNav()"><ion-icon name="menu-outline"></ion-icon></p></div>
 </header>
 
+
+
 <div class="introduce" >
 <h1>Michaelka</h1>
 <p>vývojář a grafik</p>
@@ -64,9 +66,7 @@
 <img src="./stažený soubor.png" alt="" id="figma">
 </div>
 
-<div class="container2">
-    
-</div>
+
     <section>
 <div class="slova">
     <div class="about" id="about" >
@@ -83,6 +83,7 @@
         <p>V rámci školy se nejvíce zajímám o vývoj her, webových stránek a také o grafický design.</p>
         
         </span>
+        <div class="btn"><button class="button "><a href="https://adam.owede.xyz/portfolio/" target="_blank">Mé zájmy</a></button></div>
         </div>
 </div>
 <div class="obrazek">
