--- a/fotky.html
+++ b/fotky.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fotky</title>
-    <link rel="stylesheet" href="fotky.css">
+    <link rel="stylesheet" href="styles/fotky.css">
     <link rel="stylesheet" href="root.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,21 +43,21 @@
         <div class="lide">
             <h3>lidé</h3>
         <div class="fotka1">
-            <a href="fotky (1).JPG" target="_blank"><img src="fotky (1).JPG" alt=""></a>
+            <a href="img/fotky (1).JPG" target="_blank"><img src="img/fotky (1).JPG" alt=""></a>
             <br>
             <p>Postava s rozmazaným pozadím, kontrast s růžovou a červenou.</p>
         </div>
         <div class="fotka2">
-            <a href="fotky (3).JPG" target="_blank"> <img src="fotky (3).JPG" alt=""></a>
+            <a href="img/fotky (3).JPG" target="_blank"> <img src="img/fotky (3).JPG" alt=""></a>
             <br>
             <p>Postava dívajíc se mimo kameru, třetinová kompozice.</p>
         </div>
         <div class="fotka3">
-        <a href="fotky (9).JPG" target="_blank"> <img src="fotky (9).JPG" alt=""></a>
+        <a href="img/fotky (9).JPG" target="_blank"> <img src="img/fotky (9).JPG" alt=""></a>
         <p>Zkoušení různých světel, improvizace na veřejných místech.</p>
         </div>
         <div class="fotka4">
-        <a href="fotky (6).JPG" target="_blank"> <img src="fotky (6).JPG" alt=""></a>
+        <a href="img/fotky (6).JPG" target="_blank"> <img src="img/fotky (6).JPG" alt=""></a>
         <p>Fotka v pohybu.</p>
         </div>
         <div>
@@ -67,31 +67,31 @@
     <div class="zvirata">
         <h3>zvířata</h3>
         <div class="fotka5">
-            <a href="fotky (2).JPG" target="_blank"><img src="fotky (2).JPG" alt=""></a>
+            <a href="img/fotky (2).JPG" target="_blank"><img src="img/fotky (2).JPG" alt=""></a>
             <p>Tučňák, zkoušení focení z větší vzdálenosti.</p>
         </div>
         <div class="fotka6">
-            <a href="fotky (4).JPG" target="_blank"><img src="fotky (4).JPG" alt=""></a>
+            <a href="img/fotky (4).JPG" target="_blank"><img src="img/fotky (4).JPG" alt=""></a>
             <p>Focení v Kensingtonských zahradách, objekt v pohybu, z dálky.</p>
         </div>
         <div class="fotka7">
-        <a href="fotky (7).JPG" target="_blank"><img src="fotky (7).JPG" alt=""></a>
+        <a href="img/fotky (7).JPG" target="_blank"><img src="img/fotky (7).JPG" alt=""></a>
         <p> Včela, objekt v pohybu.</p>
         </div>
     </div>
     <div class="ostatni">
         <h3>ostatní</h3>
         <div class="fotka8">
-            <a href="fotky (8).JPG"><img src="fotky (8).JPG" alt=""></a>
+            <a href="img/fotky (8).JPG"><img src="img/fotky (8).JPG" alt=""></a>
             <p>Silueta sochy na střeše Národního divadla.</p>
         </div>
         <div class="fotka9">
-            <a href="fotky (5).JPG"><img src="fotky (5).JPG" alt=""></a>
+            <a href="img/fotky (5).JPG"><img src="img/fotky (5).JPG" alt=""></a>
             <p>Recenzní fotka knihy se skleněným pozadím.</p>
         </div>
     </div>
         
-        <script src="script.js"></script>
+        <script src="scripty/script.js"></script>
         <script>
       
             var timer;
