--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 <h1>Michaelka</h1>
 <p>vývojář a grafik</p>
 
-<img src="./logo-css-3-1536.png" alt="" id="css">
-<img src="./html.png" alt="" id="html">
-<img src="./stažený soubor.png" alt="" id="figma">
+<img src="img/logo-css-3-1536.png" alt="" id="css">
+<img src="img/html.png" alt="" id="html">
+<img src="img/stažený soubor.png" alt="" id="figma">
 </div>
 
 
@@ -83,7 +83,7 @@
         <p>V rámci školy se nejvíce zajímám o vývoj her, webových stránek a také o grafický design.</p>
         
         </span>
-        <div class="btn"><button class="button "><a href="https://adam.owede.xyz/portfolio/" target="_blank">Mé zájmy</a></button></div>
+        <div class="btn"><button class="button "><a href="zajmy.html" target="_blank">Mé zájmy</a></button></div>
         </div>
 </div>
 <div class="obrazek">
@@ -97,7 +97,7 @@
         <p>@Michaelka 2022-2023</p>
     </footer>
 </div>
-<script src="script.js"></script>
+<script src="scripty/script.js"></script>
 
   <script>
   
