--- a/webovky.html
+++ b/webovky.html
@@ -44,7 +44,7 @@
             <div class="firstweb">
            <h2>První web - portfolio</h2>
          <div class="pic1">
-             <a href="webovky (1).png" target="_blank"><img src="webovky (1).png" alt=""></a>
+             <a href="img/webovky (1).png" target="_blank"><img src="img/webovky (1).png" alt=""></a>
             <ul>
                 <li class="text1">úvodní stránka</li>
                 <li>práce s listy</li>
@@ -54,7 +54,7 @@
          </div>
 
          <div class="pic2">
-             <a href="webovky (2).png" target="_blank"><img src="webovky (2).png" alt=""></a>
+             <a href="img/webovky (2).png" target="_blank"><img src="img/webovky (2).png" alt=""></a>
             <ul>
                 <li class="text2">osobní portfolio - stránka o mně</li>
                 <li>fotka, zarovná textu okolo</li>
@@ -64,8 +64,8 @@
          </div>
 
          <div class="pic3">
-             <a href="webovky (3).png" target="_blank">
-                <img src="webovky (3).png" alt="">
+             <a href="img/webovky (3).png" target="_blank">
+                <img src="img/webovky (3).png" alt="">
             </a>
             <ul>
                 <li class="text3">osobní portfolio - obrázky</li>
@@ -76,8 +76,8 @@
          </div>
 
          <div class="pic4">
-            <a href="webovky (4).png" target="_blank">
-               <img src="webovky (4).png" alt="">
+            <a href="img/webovky (4).png" target="_blank">
+               <img src="img/webovky (4).png" alt="">
            </a>
            <ul>
                <li class="text4">kontaktní informace</li>
@@ -91,7 +91,7 @@
 
 
 
-<script src="script.js"></script>
+<script src="scripty/script.js"></script>
 
   <script>
   
