--- a/texty.html
+++ b/texty.html
@@ -45,14 +45,14 @@
             <h4>vzkaz v lahvi</h4>
             <p>Krátká povídka o dvou klucích, jeden  z nich najde láhvi  se vzkazem a snaží se najít toho, kdo tam láhev nechal.</p>
             <div class="sloh1">
-            <a href="dopis v lahvi (1).png" target="_blank">
-            <img src="dopis v lahvi (1).png" alt="">
+            <a href="img/dopis v lahvi (1).png" target="_blank">
+            <img src="img/dopis v lahvi (1).png" alt="">
             </a>
-            <a href="dopis v lahvi (2).png" target="_blank">
-            <img src="dopis v lahvi (2).png" alt="">
+            <a href="img/dopis v lahvi (2).png" target="_blank">
+            <img src="img/dopis v lahvi (2).png" alt="">
             </a>
-            <a href="dopis v lahvi (3).png" target="_blank">
-            <img src="dopis v lahvi (3).png" alt=""></a>
+            <a href="img/dopis v lahvi (3).png" target="_blank">
+            <img src="img/dopis v lahvi (3).png" alt=""></a>
             </div>
         </div>
        
@@ -60,11 +60,11 @@
             <h4>mami?</h4>
             <p>Povídka napsaná v ich-formě s empatizovaným textem jako myšlenkou.</p>
             <div class="sloh2">
-            <a href="mami (1).png">
-                <img src="mami (1).png" alt="">
+            <a href="img/mami (1).png">
+                <img src="img/mami (1).png" alt="">
             </a>
-            <a href="mami (2).png">
-                <img src="mami (2).png" alt="">
+            <a href="img/mami (2).png">
+                <img src="img/mami (2).png" alt="">
             </a>
             </div>
         </div>
@@ -74,18 +74,18 @@
         <h4>nikdy nevíš</h4>
         <p>Young adult povídka z pohledu dvou kluků, Martina a Jerryho. Martin je filmmaker a jerry básníčkář, ale co když Martin najde pod lavičkou v parku tajemný notes?</p>
         <div class="sloh3">
-        <a href="nevíš (1).png" target="_blank">
-        <img src="nevíš (1).png" alt="">
+        <a href="img/nevíš (1).png" target="_blank">
+        <img src="img/nevíš (1).png" alt="">
         </a>
-        <a href="nevíš (2).png" target="_blank">
-        <img src="nevíš (2).png" alt="">
+        <a href="img/nevíš (2).png" target="_blank">
+        <img src="img/nevíš (2).png" alt="">
         </a>
-        <a href="nevíš (3).png" target="_blank">
-        <img src="nevíš (3).png" alt=""></a>
+        <a href="img/nevíš (3).png" target="_blank">
+        <img src="img/nevíš (3).png" alt=""></a>
         </div>
     </div>
 
-<script src="script.js"></script>
+<script src="scripty/script.js"></script>
 
   <script>
   
