--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>Home </title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="root.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/root.css">
     <link rel="icon" href="home.svg" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
     
     
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#home" id="mainnav" class="current">home</a>
+    <a href="#home" id="mainnav" id="current">home</a>
     <a href="#about" id="aboutnav">about</a>
     <a href="portfolio.html">portfolio</a>
     <a href="kontakt.html">contact</a>
