--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
 </div>
 <div class="obrazek">
-    <img src="./fotky (1).png" alt="">
+    <img src="img/fotky (1).png" alt="">
 </div></section>
 </div>
 <div class="kontakt" id="kontakt">
