--- a/zajmy.html
+++ b/zajmy.html
@@ -75,7 +75,7 @@
         <ion-icon name="color-palette-outline" class=" icon3" id="icon3"></ion-icon>
         <h2 class="hudba">Hudba</h2>
         <p>Main žánr? Pop.</p>
-        <button type="button" class="btn btn-info"> <a href="https://open.spotify.com/playlist/1HKTEBwjXwKm5uLNo7BUhC?si=e23cf9e00cce4b06">Spotify</a> </button>
+        <button type="button" class="btn btn-info"> <a href="https://open.spotify.com/playlist/1HKTEBwjXwKm5uLNo7BUhC?si=e23cf9e00cce4b06&nd=1" target="_blank">Spotify</a> </button>
     </div>
     
     <div class="card">
