--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
  </div>
  <div class="kontakt" id="kontakt">
     <footer>
-        <a href="mailto:michaela.ptackova.mp@gmail.com" ><ion-icon name="mail-outline" class="mail" ></ion-icon></a>
+        <a href="mailto:ptackova@deware.eu" ><ion-icon name="mail-outline" class="mail" ></ion-icon></a>
         <a href="http://www.instagram.com/michaelka.__/" target="_blank" > <ion-icon name="logo-instagram" class="instagram"></ion-icon></a>
         <p>@Michaelka 2022-2023</p>
     </footer>
