--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Home </title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/root.css">
+    <link rel="stylesheet" href="styles/header-footer.css">
     <link rel="icon" href="home.svg" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
