--- a/fotky.html
+++ b/fotky.html
@@ -7,6 +7,7 @@
     <title>Fotky</title>
     <link rel="stylesheet" href="styles/fotky.css">
     <link rel="stylesheet" href="styles/root.css">
+    <link rel="stylesheet" href="styles/header-footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Ibarra+Real+Nova&family=PT+Serif&family=Playfair+Display&family=Work+Sans:wght@200&display=swap" rel="stylesheet">
