--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="stylesheet" href="styles/root.css">
+    <link rel="stylesheet" href="styles/header-footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Baskervville&family=Bodoni+Moda:opsz@6..96&family=Comic+Neue:wght@300;400&family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=DM+Serif+Display&family=Great+Vibes&family=Ibarra+Real+Nova&family=Dancing+Script:wght@400;500;600;700&family=Marcellus&family=Nanum+Myeongjo&family=Oranienbaum&family=PT+Serif&family=Playfair+Display&family=Source+Code+Pro=Unna&family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -45,8 +46,8 @@
                 
                 
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="#home" id="mainnav" >home</a>
-                <a href="#about" id="aboutnav">about</a>
+                <a href="index.html" id="mainnav" >home</a>
+                <a href="index.html" id="aboutnav">about</a>
                 <a href="#" id="current">portfolio</a>
                 <a href="kontakt.html">contact</a>
                 <a href="" onclick="changeColorMode()" id="dark-mode" ><ion-icon name="flashlight-outline" class="flash"></ion-icon></a>
