--- a/webovky.html
+++ b/webovky.html
@@ -97,7 +97,7 @@
 
          <div class="pic4">
             <a href="img/webovky (4).png" target="_blank">
-               <img src="img/webovky (4).png" alt="">
+               <img src="img/webovky (4).png" alt="" id="last">
            </a>
            <ul>
                <li class="text4">kontaktní informace</li>
