--- a/grafika.html
+++ b/grafika.html
@@ -7,6 +7,7 @@
     <title>Grafika</title>
     <link rel="stylesheet" href="styles/grafika.css">
     <link rel="stylesheet" href="styles/root.css">
+    <link rel="stylesheet" href="styles/header-footer.css">
     <link rel="icon" href="paperclip.svg" type="image/x-icon">
 
 
