--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p>Jako praxi v oboru mimo školu dělám webové stránky, na které se můžete podívat <a href="webovky.html">zde</a>.</p>
         <p>Ceník není stálý, proto ho zde nemohu dát, ceny jsou však velni výhodné, když zvážíme práci i čas.</p>
         
-        <p>Studuji na <a href="https://skolabaltaci.cz/">SŠ Baltaci</a> ve Zlíně, na oboru Informační technologie.</p>
+        <p>Studuji na <a href="https://creativehill.cz/">Creative Hill College</a> ve Zlíně, na oboru Vývoj počítačových her a multimediálních aplikací.</p>
         <p>V rámci školy se nejvíce zajímám o vývoj her, webových stránek a také o grafický design.</p>
         
         </span>
